crates/stems-tui/src/snapshots/stems_tui__tests__detail-120x40.snap
---
source: crates/stems-tui/src/tests.rs
expression: text
---
 stems · process-chain                                                              Graph  Table [Detail] Logs  Events
┌ Detail: b · ✓ healthy ───────────────────────────────────────────────────────────────────────────────────────────────┐
│Config                                                      Status                                                    │
│type: process                                               ✓ healthy (ready (tcp))                                   │
│enabled: true                                               pid 102 · up 8s · restarts 0                              │
│env:                                                        ports http:18302                                          │
│  SHOP_SLEEP_START: '0.5'                                   Scripts                                                   │
│ports:                                                      start, seed                                               │
│- name: http                                                Health                                                    │
│  port: 18302                                               12:00:05 ✓ connected (1ms)                                │
│depends_on:                                                 12:00:06 ✗ connection refused (150ms)                     │
│- stem: a                                                   Metrics                                                   │
│  condition: healthy                                        n/a (no samples yet)                                      │
│scripts:                                                    Events                                                    │
│  start:                                                    12:00:03 stem.state stopped→starting                      │
│    command: python3 app.py                                 12:00:04 stem.state starting→healthy                      │
│  seed:                                                                                                               │
│    command: ./seed.sh                                                                                                │
│stop_grace: 1s                                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 process-chain · profile - · daemon pid 4242 · ✓2 !0 ✗0 ·1 ?0 ↻1                             Esc back · ? help · q quit
