crates/stems-tui/src/snapshots/stems_tui__tests__detail-80x24.snap
---
source: crates/stems-tui/src/tests.rs
assertion_line: 705
expression: text
---
 stems · process-chain           1 Graph  2 Table  3 [Detail]  4 Logs  5 Events
┌ Detail: b · ✓ healthy · lines 1-19/32 ──────── a  [b]  c  d · [ ] ←/→ switch ┐
│✓ healthy · ready (tcp)                                                       │
│pid 102 · up 8s · restarts 0                                                  │
│ports http:18302                                                              │
│                                                                              │
│Scripts                                                                       │
│loading…                                                                      │
│                                                                              │
│Health                                                                        │
│12:00:05 ✓ connected (1ms)                                                    │
│12:00:06 ✗ connection refused (150ms)                                         │
│                                                                              │
│Recent events                                                                 │
│12:00:03 stem.state stopped→starting                                          │
│12:00:04 stem.state starting→healthy                                          │
│                                                                              │
│Config                                                                        │
│type: process                                                                 │
│enabled: true                                                                 │
│env:                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 ■ x stop  ↻ r restart  : scripts  o editor  ? more
 process-chain · profile - · daemon pid 4242 · ✓2 !0 ✗0 ↯0 ·1 ?0 ↻1 j/k row · E…
