crates/stems-tui/src/snapshots/stems_tui__tests__events-view-filtered-80x24.snap
---
source: crates/stems-tui/src/tests.rs
assertion_line: 1171
expression: text
---
 stems · minimal                 1 Graph  2 Table  3 Detail  4 Logs  5 [Events]
┌ Events · /restart_ ──────────────────────────────────────────────────────────┐
│  TIME     KIND            STEM       FROM→TO             REASON      ACTOR   │
│› 12:00:04 stem.restarting echo-svc   -                   failed: ex… daemon  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 minimal · profile - · daemon pid 4242 · ✓0 !0 ✗1 ↯0 ·0 ?0 ↻0 j/k scroll · Ente…
