crates/stems-tui/src/snapshots/stems_tui__tests__graph-ascii-80x24.snap
---
source: crates/stems-tui/src/tests.rs
assertion_line: 941
expression: text
---
 stems · process-...  1 [Graph]  2 Table  3 Detail  4 Logs  5 Events  6 Scripts
             +------+
         +-->| b OK +--+
+-----+  |   +------+  |   +--------+
| d - +--+             +-->| a FAIL |
+-----+  |   +------+  |   +--------+
         +-->| c .. +--+
             +------+













 OK healthy  WARN degraded  FAIL failed  - stopped  ? unknown  .. transitioning
 s start  : scripts  o editor  ? more
 process-chain · profile - · daemon pid 4242 · OK1 WARN0 FAIL0 U1 -1 ?0 ..1
