crates/stems-tui/src/snapshots/stems_tui__tests__graph-focus-labels-80x24.snap
---
source: crates/stems-tui/src/tests.rs
expression: text
---
 stems · process-chain                     [Graph] Table  Detail  Logs  Events
┌─────┐      ┌─────┐           ┌─────┐
│ d · ├─────▶│ c ↻ ├─── http ─▶│ a ✗ │
└─────┘      └─────┘           └─────┘


















 ✓ healthy  ! degraded  ✗ failed  · stopped  ? unknown  ↻ transitioning
 process-chain · profile - · daemon pid 4242 · ✓1 !0 ✗1 ·1 ?0 ↻1 ? help · q qui…
